# next-door-key-simulator

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml  request_handler.py  requirements.txt
certs/: generate-3kme.sh  generate.sh
dev/: start-kme-1.sh  start-kme-2.sh  start-kme-3.sh
examples/chat/: README.md  client.py  server.py
keys/: key_generator.py  key_store.py
network/: broadcaster.py  scanner.py
router/: external.py  internal.py
server/: app.py  request_handler.py  tls.py
src/kme-sim/: app.py
src/kme-sim/router/: external.py  internal.py
src/kme-sim/server/: app.py
src/kme_sim/: app.py
src/kme_sim/keys/: key_generator.py  key_pool.py  key_store.py
src/kme_sim/logger/: logger.py
src/kme_sim/network/: broadcaster.py  scanner.py
src/kme_sim/router/: internal.py
src/kme_sim/server/: app.py  security.py
